kubernetes/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solar-system-prod
  namespace: ${NAMESPACE}
  annotations:
    # Disables automatic HTTP->HTTPS redirect while testing without SSL certs
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  # Updated annotation to modern K8s spec
  ingressClassName: nginx
  rules:
    # Removing the explicit 'host' rule allows NGINX to catch all incoming traffic on the NLB
    - host: ${INGRESS_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: solar-system
                port:
                  number: 3000
